testsuite/tests/pmcheck/complete_sigs/completesig04.stderr

completesig04.hs:3:1: error:
    • Orphan COMPLETE pragmas not supported
      A COMPLETE pragma must mention at least one data constructor
      or pattern synonym defined in the same module.
    • In {-# COMPLETE Just, Left #-}
